# openenv

./: .gitignore  Dockerfile  README.md  app.py  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  submission-checklist.md  test_environment.py
__pycache__/: app.cpython-312.pyc.1429425597344  app.cpython-312.pyc.1566719478320  app.cpython-312.pyc.2488102357680  app.cpython-312.pyc.2498730371680  app.cpython-312.pyc.2551996680880  app.cpython-312.pyc.2632360856112
baseline/: run_baseline.py
medienv/: __init__.py  environment.py  grader.py  scenarios.json  tasks.py
medienv/__pycache__/: environment.cpython-312.pyc.1950428203312  environment.cpython-312.pyc.2032304556912  tasks.cpython-312.pyc.1984201726336
server/: app.py  environment.py  models.py  triage_environment.py
